--- a/qt_designer/new_set.ui
+++ b/qt_designer/new_set.ui
@@ -565,6 +565,12 @@ QSlider::sub-page:vertical {
           <property name="text">
            <string>Hozzáadás</string>
           </property>
+          <property name="autoDefault">
+           <bool>true</bool>
+          </property>
+          <property name="default">
+           <bool>false</bool>
+          </property>
          </widget>
         </item>
         <item>
